extra long words text wrap issue on Comment Composer resolved ... Need to review this CSS property to see if there is alternative

--- a/app/react/components/CommentComposer/CommentComposer.css
+++ b/app/react/components/CommentComposer/CommentComposer.css
@@ -18,6 +18,8 @@
   flex: 1;
   color: #415764;
   font-size: 1.375rem;
+  /*TODO: ANI GUGL the below usage of breaking long words if required and not breaking short words otherwise works well magically but doesn't seem to be supprted by CSS3'*/
+  word-break: break-word;
 }
 
 .form :global .react-mentions .control.textarea {
